# Action-shuviVoice

./: .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  CODEOWNERS  CODEOWNERS.txt  Dockerfile  Jenkinsfile  README.md  azure-pipelines.envs  azure-pipelines.yml  cookiecutter.json  docker-compose-debug.yml  docker-compose.yml  filelist.txt  integration-test.env  integration.dockerfile  integration.yml  local.env  local_build.cmd  local_build.sh  pyproject.toml  pytest.ini  quick_push.sh  requirements_VITS.txt  setup.cfg  test_subprocess.py  update_action_name.cmd  update_action_name.py  update_submodule.cmd  update_template.cmd
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml  labeler.yml  release.yml
.github/PULL_REQUEST_TEMPLATE/: design.md  implement.md
.github/workflows/: daily-pre-commit-fixer.yml  daily-pre-commit-updater.yml  feature-test-checker.yml  jarvis.yml  labeler.yml  master-sonarqube-report-updater.yml  pr-by-pass-feature-test.yml  pr-bypass-feature-test.yml  pr-chatbot-jarvis.yml  pr-code-fixer-linter.yml  pr-code-fixer.yml  pr-enable-auto-merge-dependabot.yml  pr-sonarqube.yml  pr-stats.yml  pre-commit-fixer.yml  pre-commit-updater.yml  release.yml  sonarqube-master.yml  sonarqube-pr.yml  sonarqube.yml  weekly-auto-merge.yml
Action-{{cookiecutter.action_name}}/: .gitignore  .pre-commit-config.yaml  Dockerfile  Jenkinsfile  azure-pipelines.envs  azure-pipelines.yml  docker-compose.yml  local_build.sh  pyproject.toml
Action-{{cookiecutter.action_name}}/src/: manager.py  prestart.sh
Action-{{cookiecutter.action_name}}/src/app/: config.py  custom_logging.py  logging_config.json
Action-{{cookiecutter.action_name}}/src/app/action/: executor.py  models.py  router.py
Action-{{cookiecutter.action_name}}/src/app/health/: router.py
Action-{{cookiecutter.action_name}}/src/tests/: conftest.py  pytest.ini
Action-{{cookiecutter.action_name}}/src/tests/utest/: test_parallel.py
assets/: assets.md
design/: flowchart.md
docs/: filelist.txt
hooks/: .pre_gen_project.py.swp  post_gen_project.py  pre_gen_project.py
integration/: basicCheckSiteServiceStatusDemo.sh  checker.py  startTest.sh  test_feature.py  test_ping.py  test_smoking.py
integration/feature_test/: daemon_mode_operation_1_should_pass.json  daemon_mode_operation_2_should_pass.json  hello_world_example_should_pass.json  hello_world_multi_line_example_should_pass.json  hello_world_single_line_example_should_pass.json  helper.py
resources/example/v0.1.0/: hello.txt
resources/example/v0.2.0/: hello.txt
scripts/: local_build.cmd  update_action_name.py  update_submodule.cmd  update_template.cmd
src/: custom_logging.py  helper-testcase.py  logging_config.json  manager.py  prestart.sh  pytest.ini  requirements-dev.txt  requirements.txt  setup.cfg  start-reload.sh
src/app/: action-executortemplate-history.json  config.py  custom_logging.py  description.py  history.json  log.py  logging_config.json  main.py
src/app/action/: executor.py  models.py  router.py  scenario.py
src/app/api/api_v1/: api.py
src/app/api/api_v1/endpoints/: action.py  ping.py
src/app/core/: config.py
src/app/debug/: router.py
src/app/health/: router.py
src/app/schemas/: __init__.py  models.py
src/static/: __init__.py  daemon.ps1  make_archive.py  monitorOnStart.ps1  monitorOnStop.ps1  monitor_target.Tests.ps1  monitor_target.ps1  onAbort.ps1
src/static/daemon_examples/: daemonWatchdog.ps1  daemon_broken.ps1  monitorOnStart.ps1  monitorOnStop.ps1  onAbort.ps1
src/static/examples/: isRunning.Tests.ps1  isRunning.ps1  monitorOnStart.cmd  monitorOnStop.ps1  monitorTargetData.ps1
src/tests/: conftest.py  pytest.ini  test_payload.json
src/tests/api/api_v1/: test_action.py  test_ping.py
src/tests/integration/: test_inte_executor.py
src/tests/utest/: presignurl.json  test_action_model.py  test_config.py  test_debug.py  test_executor.py  test_parallel.py  test_ping.py
