[tool.poetry]
name = "action-executortemplate"
version = "1.2.0"
description = "action-executortemplate"
authors = ["Mason Lin <mason.lin1@hp.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = {extras = ["all"], version = "^0.94.1"}
requests = "^2.28.2"
uvicorn = {extras = ["standard"], version = "^0.21.0"}
ansi2html = "^1.8.0"
python-multipart = "^0.0.6"
vcosmosapiclient = {path = "ActionTemplate-Python3", develop = true}

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"
pytest-asyncio = "^0.20.3"
pytest-mock = "^3.10.0"
pytest-xdist = "^3.2.1"
coverage = {extras = ["toml"], version = "^7.2.1"}
black = "^23.1.0"
pylama = {extras = ["all"], version = "^8.4.1"}
requests-toolbelt = "^0.10.1"
pre-commit = "^3.1.1"
pytest-httpx = "^0.21.3"
pytest-cov = "^4.0.0"
bandit = "^1.7.5"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -s -v --log-cli-level=DEBUG -p no:warnings --junitxml=junit.xml --strict-markers"
asyncio_mode = "strict"
norecursedirs = ["ActionTemplate-Python3", "integration"]

[tool.coverage.run]
branch = true
relative_files = true
omit = ["src/tests/*", "ActionTemplate-Python3/*"]

[tool.pylama]
format = "pylint"
skip = "*/.env/*,static/*"
linters = "eradicate,mccabe,pycodestyle,pyflakes,pylint,isort"

[tool.pylama.linter.pyflakes]
builtins = "_"

[tool.pylama.linter.pycodestyle]
max_line_length = 140
ignore = "E203,W503"
statistics = true

[tool.pylama.linter.pylint]
max_line_length = 140
disable = "C,R,W0511,W0613,W0703,W0707,W1203"
extension-pkg-whitelist = "pydantic"

[tool.pylama.linter.isort]
line_length = 140
profile = "black"

[tool.codespell]
count = true
quiet-level = 3
skip = '.git,*.lock,htmlcov,ActionTemplate-Python3'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
