[tool.poetry]
name = "action-executor"
version = "1.0.0"
description = "action-executor"
authors = ["Mason Lin <mason.lin1@hp.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "0.68.1"
httpx = "0.17.1"
requests = "2.26.0"
uvicorn = "0.15.0"
jsonschema = "^4.1.2"
pylama = "^8.3.6"
python-multipart = "^0.0.5"
loguru = "^0.5.3"
aiofiles = "^0.8.0"

[tool.poetry.dev-dependencies]
bandit = "1.7.0"
coverage = "5.5"
isort = "5.9.3"
pytest = "6.2.5"
pytest-asyncio = "0.15.1"
safety = "1.10.3"
pylint = "^2.12.2"
black = "^21.12b0"
pytest-cov = "^3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
